add new uri for bd

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,3 @@
-spring.data.mongodb.uri=mongodb://localhost:27017/PersonDB
+spring.data.mongodb.uri=mongodb://<dbuser>:<dbpassword>@ds151141.mlab.com:51141/heroku_xs8kscr6
 spring.jpa.generate-ddl=true
-
-com.cloudinary.cloud_name= ${cloud_name:piusaremieye}
-com.cloudinary.api_key= ${api_key:475476531299184}
-com.cloudinary.api_secret= ${api_secret:Y1gJDPyzNDrn1AwMtj8-b15ewlY}
 
