cloud-base-works

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
-spring.data.mongodb.uri=mongodb://<dbuser>:<dbpassword>@ds151141.mlab.com:51141/heroku_xs8kscr6
-spring.jpa.generate-ddl=true
+#spring.data.mongodb.uri=mongodb://people:mlab1337@ds151141.mlab.com:51141/heroku_xs8kscr6
+
+spring.data.mongodb.uri=mongodb://localhost:27017/PersonDB
+
 
