--- a/src/main/resources/Procfile
+++ b/src/main/resources/Procfile
@@ -1,1 +1,2 @@
+MONGODB_URI=mongodb+srv://youruser1337:postgres@cluster0.re0pt.mongodb.net/people?retryWrites=true&w=majority
 --spring.data.mongodb.uri=$MONGOLAB_URI
