--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,4 @@
-spring.data.mongodb.uri=mongodb+srv://youruser1337:postgres@cluster0.re0pt.mongodb.net/people?retryWrites=true&w=majority
-
+spring.data.mongodb.uri=mongodb+srv://simple:simple@cluster0.re0pt.mongodb.net/people?retryWrites=true&w=majority
 #spring.data.mongodb.uri=mongodb://localhost:27017/PersonDB
 
 
