modified changeScoreByName method

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,5 +2,5 @@ spring.data.mongodb.uri=mongodb+srv://simple:simple@cluster0.re0pt.mongodb.net/p
 #spring.data.mongodb.uri=mongodb://localhost:27017/PersonDB
 
 
-pingtask.url=https://www.google.co
+pingtask.url=https://www.google.com
 
