--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@ target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
-
+!**/src/main/resources/
 ### STS ###
 .apt_generated
 .classpath
@@ -23,9 +23,6 @@ mvnw.cmd
 HELP.md
 target
 mvnw
-
-*/resources/application.properties
-/resources/application-dev.properties
 msrl3_girl_contest
 
 ### NetBeans ###
